--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:10.2.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
 
     testCompile 'junit:junit:4.12'
 }
