--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'com.github.orangegangsters:swipy:1.2.3@aar'
 
     testCompile 'junit:junit:4.12'
 }
