--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:maxSdkVersion="22" />
 
     <application
+        android:name="com.faragostaresh.app.CafeyabApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -60,9 +61,19 @@
             android:parentActivityName=".MainActivity">
         </activity>
         <activity
+            android:name=".EventSingleActivity"
+            android:label="@string/activity_event_single"
+            android:parentActivityName=".EventListActivity">
+        </activity>
+        <activity
             android:name=".VideoListActivity"
             android:label="@string/activity_video_list"
             android:parentActivityName=".MainActivity">
+        </activity>
+        <activity
+            android:name=".VideoSingleActivity"
+            android:label="@string/activity_video_single"
+            android:parentActivityName=".VideoListActivity">
         </activity>
         <activity
             android:name=".MapListActivity"
