--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,11 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.github.orangegangsters:swipy:1.2.3@aar'
 
+    compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    /* compile ('com.weiwangcn.betterspinner:library-material:1.1.0') {
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+        exclude group: 'com.rengwuxian.materialedittext', module: 'library'
+    } */
+
     testCompile 'junit:junit:4.12'
 }
