--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    // Android libs
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:mediarouter-v7:25.3.0'
     compile 'com.android.support:design:25.3.0'
@@ -40,14 +42,24 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.0'
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+
+    // Google map libs
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.google.android.gms:play-services:10.2.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile 'com.github.orangegangsters:swipy:1.2.3@aar'
-    compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
 
+    // Load image on index page
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    // Add custom font
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+
+    // Volley libe for work by json and build list
+    compile 'com.mcxiaoke.volley:library:1.0.19'
+
+    // Custom Swipy Refresh end of list
+    compile 'com.github.orangegangsters:swipy:1.2.3@aar'
+
+    // Add a draggable sliding up panel use on search
     compile 'com.sothree.slidinguppanel:library:3.3.1'
 
     testCompile 'junit:junit:4.12'
