--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,13 +35,13 @@ dependencies {
     })
 
     // Android libs
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support:mediarouter-v7:25.3.0'
-    compile 'com.android.support:design:25.3.0'
-    compile 'com.android.support:support-vector-drawable:25.3.0'
-    compile 'com.android.support:recyclerview-v7:25.3.0'
-    compile 'com.android.support:cardview-v7:25.3.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:mediarouter-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-vector-drawable:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.1'
 
     // Google map libs
     compile 'com.google.android.gms:play-services-maps:10.2.1'
