--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,22 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            storeFile file('/home/voltan/Downloads/cafeyab.jks')
+            keyAlias 'cafeyab'
+            keyPassword 'anakin113071'
+            storePassword 'anakin113071'
+        }
+    }
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.faragostaresh.cafeyab"
         minSdkVersion 21
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 11
+        versionName "2.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         jackOptions {
