--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!--
+     The API key for Google Maps-based APIs is defined as a string resource.
+     (See the file "res/values/google_maps_api.xml").
+     Note that the API key is linked to the encryption key used to sign the APK.
+     You need a different API key for each encryption key, including the release key that is used to
+     sign the APK for publishing.
+     You can define the keys for the debug and release targets in src/debug/ and src/release/.
+-->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
         <activity
             android:name=".SplashActivity"
             android:screenOrientation="portrait"
@@ -100,17 +113,16 @@
             android:label="@string/activity_map_list"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".MapSingleActivity"
             android:label="@string/activity_map_single"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".UserActivity"
             android:label="@string/activity_user"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
