--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,7 +87,8 @@
             android:name=".NewsSingleActivity"
             android:label="@string/activity_news_single"
             android:parentActivityName=".NewsListActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".EventListActivity"
             android:label="@string/activity_event_list"
@@ -97,7 +98,8 @@
             android:name=".EventSingleActivity"
             android:label="@string/activity_event_single"
             android:parentActivityName=".EventListActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".VideoListActivity"
             android:label="@string/activity_video_list"
