--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,14 @@ dependencies {
     // Add a draggable sliding up panel use on search
     compile 'com.sothree.slidinguppanel:library:3.3.1'
 
+    // circle image
     compile 'de.hdodenhof:circleimageview:2.1.0'
+
+    // Firebase
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
 
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
