--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,10 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.google.android.gms:play-services:10.2.1'
 
+    // Firebase
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+
     // Load image on index page
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
@@ -65,9 +69,8 @@ dependencies {
     // circle image
     compile 'de.hdodenhof:circleimageview:2.1.0'
 
-    // Firebase
-    compile 'com.google.firebase:firebase-core:10.0.1'
-    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    // Bottom Navigation
+    compile 'com.ashokvarma.android:bottom-navigation-bar:1.4.1'
 
     testCompile 'junit:junit:4.12'
 }
