--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyAIrilJdHcOkS_fXE1e4Z8R3_wbBPifINk" />
 
         <activity
             android:name=".SplashActivity"
