--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "com.faragostaresh.cafeyab"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 16
         versionName "2.0.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -35,12 +35,12 @@ dependencies {
     })
 
     // Android libs
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:mediarouter-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:support-vector-drawable:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:mediarouter-v7:26.+'
+    compile 'com.android.support:design:26.+'
+    compile 'com.android.support:support-vector-drawable:26.+'
+    compile 'com.android.support:recyclerview-v7:26.+'
+    compile 'com.android.support:cardview-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
 
     // Google play services
@@ -54,7 +54,7 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:10.0.1'
 
     // Google exoplayer
-    compile 'com.google.android.exoplayer:exoplayer:r2.0.0'
+    compile 'com.google.android.exoplayer:exoplayer:r2.5.1'
 
     // Load image on index page
     compile 'com.github.bumptech.glide:glide:3.7.0'
