--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.faragostaresh.cafeyab"
         minSdkVersion 21
-        targetSdkVersion 26
-        versionCode 16
-        versionName "2.0.3"
+        targetSdkVersion 27
+        versionCode 1
+        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         jackOptions {
             enabled true
         }
-        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -22,10 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
+    /* compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-    }
+    } */
 }
 
 dependencies {
@@ -35,32 +33,32 @@ dependencies {
     })
 
     // Android libs
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:mediarouter-v7:26.+'
-    compile 'com.android.support:design:26.+'
-    compile 'com.android.support:support-vector-drawable:26.+'
-    compile 'com.android.support:recyclerview-v7:26.+'
-    compile 'com.android.support:cardview-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.1'
+    compile 'com.android.support:appcompat-v7:27.1.0'
+    compile 'com.android.support:mediarouter-v7:27.1.0'
+    compile 'com.android.support:design:27.1.0'
+    compile 'com.android.support:support-vector-drawable:27.1.0'
+    compile 'com.android.support:recyclerview-v7:27.1.0'
+    compile 'com.android.support:cardview-v7:27.1.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Google play services
-    compile 'com.google.android.gms:play-services-base:11.0.4'
-    compile 'com.google.android.gms:play-services-location:11.0.4'
-    compile 'com.google.android.gms:play-services-maps:11.0.4'
-    compile 'com.google.android.gms:play-services-places:11.0.4'
+    compile 'com.google.android.gms:play-services-base:11.8.0'
+    compile 'com.google.android.gms:play-services-location:11.8.0'
+    compile 'com.google.android.gms:play-services-maps:11.8.0'
+    compile 'com.google.android.gms:play-services-places:11.8.0'
 
     // Google  firebase
-    compile 'com.google.firebase:firebase-core:10.0.1'
-    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.firebase:firebase-core:11.8.0'
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
 
     // Google exoplayer
     compile 'com.google.android.exoplayer:exoplayer:r2.5.1'
 
     // Load image on index page
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:glide:4.6.1'
 
     // Add custom font
-    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+    compile 'uk.co.chrisjenx:calligraphy:2.3.0'
 
     // Volley libe for work by json and build list
     compile 'com.mcxiaoke.volley:library:1.0.19'
@@ -69,13 +67,13 @@ dependencies {
     compile 'com.github.orangegangsters:swipy:1.2.3@aar'
 
     // Add a draggable sliding up panel use on search
-    compile 'com.sothree.slidinguppanel:library:3.3.1'
+    compile 'com.sothree.slidinguppanel:library:3.4.0'
 
     // circle image
-    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
 
     // Bottom Navigation
-    compile 'com.ashokvarma.android:bottom-navigation-bar:1.4.1'
+    compile 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
 
     testCompile 'junit:junit:4.12'
 }
